--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,4 +11,4 @@
  *= require_self
  *= require_tree .
  */
-@import "bootstrap";
+/* @import must be at top of file, otherwise CSS will not work */
