--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,13 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-  <div id='header'>
+  <!--<div id='header'>
     <% if signed_in? -%>
       <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
     <% else -%>
       <%= link_to t('.sign_in'), sign_in_path %>
     <% end -%>
-  </div>
+  </div>-->
 
   <div id='flash'>
     <% flash.each do |key, value| -%>
