--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -10,7 +10,7 @@
     </div>
 
     <div class='submit-field'>
-      <%= form.submit %>
+      <%= form.submit :class => "btn" %>
     </div>
   <% end %>
 </div>
